<resources>
    <string name="app_name" translatable="false">RiCE Tweaks</string>
    <string name="cpv_default_title">Select a Colour</string>
    <string name="cpv_presets">Presets</string>
    <string name="cpv_custom">Custom</string>
    <string name="cpv_select">Select</string>
    <string name="cpv_transparency">Transparency</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose Selected</string>
    <string name="fail_read_app_version">Failed to read app version</string>
    <string name="nav_rom_options">ROM Control</string>
    <string name="nightlies_no_connection">You need to be connected to the internet to read the changelog.</string>
    <string name="nightlies_error">An error occured while storing the changelog.</string>
    <string name="nightlies_summary">Click here to see recent changes</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Black Theme</string>
    <string name="theme">Switch Theme</string>
    <string name="nav_system">System</string>
    <string name="nav_system_info">System Info</string>
    <string name="nav_home">Home</string>
    <string name="nav_ui">System UI/Buttons</string>
    <string name="nav_statusbar">Status Bar</string>
    <string name="nav_app">Application</string>
    <string name="nav_colors">Colours</string>
    <string name="nav_misc">Misc</string>
    <string name="subscription_error">Subscriptions are not supported on your device yet. Sorry!</string>
    <string name="iab_async_error">Error launching in-app purchases. Another async operation in progress.</string>
    <string name="error">Error</string>
    <string name="free_license">Please consider supporting us by purchasing a license.</string>
    <string name="free_notification">\"Options available only in premium version. Please consider purchasing a key.\"</string>
    <string name="free_notification2">"Options available only in premium version. Please consider purchasing a key."</string>
    <string name="nosubscription">"Options available only in monthly subscription version or if you have all 3 one time licenses bought. Please consider subscribing"</string>
    <string name="error_license_flow">Error launching in-app purchases. Please relaunch the application!</string>
    <string name="donation_obsolete">Old app licensing detected.\nWith next update it will be deprecated, please contact Renovate Team via Telegram in order to activate your new legacy license.</string>
    <string name="donation2">Donation: 2€ License</string>
    <string name="donation5">Donation: 5€ License</string>
    <string name="donation10">Donation: 10€ License</string>
    <string name="legacy_license">Legacy License</string>
    <string name="detected">has been found.</string>
    <string name="thankyou">You are awesome, thank you for your support!</string>
    <string name="thankyoumultiple">Multiple licenses detected!\nWe are forever grateful, thank you!</string>
    <string name="subscription">Monthly subscription license</string>
    <string name="settings_license">License</string>
    <string name="subscription_period_monthly">~1.10€ / Month</string>
    <string name="onetimefee">Donation</string>
    <string name="onetimefee2">~2€</string>
    <string name="onetimefee5">~5€</string>
    <string name="onetimefee10">~10€</string>
    <string name="iab_error">In App Billing is not supported on your device yet.\n\nPlease contact us via Telegram support chat for other licensing options</string>
    <string name="changelog_full_title">App Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>
    <string name="not_rooted">Root required</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="visible">Visible</string>
    <string name="hidden">Hidden</string>
    <string name="sysapp">Install as System App</string>
    <string name="force_english_title">Force English Language</string>
    <string name="onstart">On App Start</string>
    <string name="in_background">In background as service</string>
    <string name="romupdate">Notify on ROM updates</string>
    <string name="romupdatenightly">Notify on Nightly updates</string>
    <string name="general_info">General info</string>
    <string name="rom_version">ROM Version</string>
    <string name="rom_changelog">Renovate Nightly changelog</string>
    <string name="app_version">RiCE Tweaks version</string>
    <string name="xda_thread">XDA thread</string>
    <string name="xda_thread_summary">Visit the XDA thread for more information</string>
    <string name="telegram_chat">Telegram Chat</string>
    <string name="telegram_chat_summary">Join the Telegram group chat</string>
    <string name="tweaks_lockscreen_rotation_title">Lock Screen rotation</string>
    <string name="tweaks_lockscreen_guide_text_summaryOn">Help text on lock screen is hidden</string>
    <string name="tweaks_quick_unlock_title">Quick Unlock</string>
    <string name="tweaks_quick_unlock_summary">Unlock the device without pressing the ok button</string>
    <string name="tweaks_scramble_pin_title">Randomize pin keypad</string>
    <string name="tweaks_scramble_pin_summary">This only work if stock samsung theme is applied (colour tweaks work fine)</string>
    <string name="tweaks_lockscreen_guide_text_title">Hide Lock Screen help text</string>
    <string name="tweaks_navbar_icon_color">Navbar Icon colour</string>
    <string name="tweaks_dynamic_navbar_title">Dynamic Navigation Bar</string>
    <string name="tweaks_dynamic_navbar_summary">Navigation Bar colour will be the same as Statusbar Colour (some apps will force certain colours)</string>
    <string name="tweaks_allow_color_change">Allow colour changes?</string>
    <string name="tweaks_allow_color_change_summary">colours are locked to stock</string>
    <string name="tweaks_allow_color_change_summaryOn">colours are unlocked for editing</string>
    <string name="tweaks_clock_onclick_title">Launch Clock app</string>
    <string name="tweaks_clock_onclick_summary">Launch Clock app when clicking on the clock in the notification panel</string>
    <string name="tweaks_hide_battery_title">Hide Battery Icon</string>
    <string name="tweaks_show_multi_user_title">Multi User avatar</string>
    <string name="tweaks_double_tap_sleep_title">Double Tap to sleep</string>
    <string name="tweaks_double_tap_sleep_summary">Double Tap status bar to put device to sleep</string>
    <string name="tweaks_qs_rows_title">QS Row count</string>
    <string name="tweaks_qs_columns_title">QS Column count</string>
    <string name="tweaks_quick_qs_buttons_title">Compact QS Tiles</string>
    <string name="tweaks_brightness_slider_title">Hide QS Brightness slider</string>
    <string name="tweaks_brightness_slider_summary">Visible</string>
    <string name="tweaks_brightness_slider_summaryOn">Hidden</string>
    <string name="tweaks_qs_lock_title">Lock Quick Settings pulldown</string>
    <string name="tweaks_qs_lock_summary">Lock the quick settings from being pulled down on the lockscreen</string>
    <string name="tweaks_qs_override_lockscreen_title">Enable QS on secured lock screen</string>
    <string name="tweaks_qs_override_lockscreen_summary">Allow use of restricted toggles while phone is locked</string>
    <string name="tweaks_qs_pulldown_summary">Pulling the status bar down from the right will open straight to the tiles</string>
    <string name="tweaks_qs_pulldown_title">Quick pull down</string>
    <string name="tweaks_qs_pulldown_blur_summary">Add a blur effect to the background of the QS</string>
    <string name="tweaks_qs_pulldown_blur_title">Pulldown Background blur</string>
    <string name="battery_bar_title">Battery Bar</string>
    <string name="battery_bar_summary">Disabled</string>
    <string name="battery_bar_summaryOn">Enabled</string>
    <string name="tweaks_hide_keyboard_switcher_title">Hide Keyboard Selection notification</string>
    <string name="battery_bar_center_style_title">Center-Mirrored</string>
    <string name="battery_bar_center_style_summary">Disabled</string>
    <string name="battery_bar_center_style_summaryOn">Center-Mirrored</string>
    <string name="battery_bar_animate_style_title">Bar Animation</string>
    <string name="battery_bar_animate_style_summary">Disabled</string>
    <string name="battery_bar_animate_style_summaryOn">Enabled</string>
    <string name="battery_bar_thickness_title">Bar Thickness</string>
    <string name="battery_bar_color_title">Bar Colour</string>
    <string name="tweaks_disable_system_notifications">Make System Notifications removable</string>
    <string name="immersive_category">Immersive Mods</string>
    <string name="immersive_perapp">Immersive Mode (Per App)</string>
    <string name="immersive_perapp_summary">Select Apps for Auto Immersion</string>
    <string name="immersive_perapp_title">Immersive Mode (Per App)</string>
    <string name="tweaks_show_navbar_title">Enable Navigation Bar</string>
    <string name="tweaks_allow_custom_navbar_height_title">Allow Navbar height to be edited</string>
    <string name="tweaks_navbar_height_title">Navigation Bar height (Potrait rotation only)</string>
    <string name="battery_percentage_flash_title">Camera flash battery (%) limit</string>
    <string name="battery_percentage_flash_summary">Battery level to disable the use of flash in camera</string>
    <string name="window_animation_scale_title">Window Animation scale</string>
    <string name="transition_animation_scale_title">Transition Animation scale</string>
    <string name="animator_duration_scale_title">Animator Duration scale</string>
    <string name="window_animation">System Animations</string>
    <string name="buttons">Buttons</string>
    <string name="general">General</string>
    <string name="tweaks_immersive_title">Immersive Mode</string>
    <string name="tweaks_all_rotations_title">Enable all rotations</string>
    <string name="tweaks_disable_volume_warning_title">Loud Volume warning</string>
    <string name="tweaks_disable_brightness_warning_title">High Brightness warning</string>
    <string name="tweaks_fingerprint_unlock_title">Fingerprint/Iris unlock</string>
    <string name="tweaks_fingerprint_unlock_summary">Do not allow unlock by Fingerprint/Iris after reboot</string>
    <string name="tweaks_fingerprint_unlock_summaryOn">Allow unlock by Fingerprint/Iris after reboot</string>
    <string name="tweaks_back_to_kill_title">Long press "Back" Button to Kill</string>
    <string name="tweaks_recent_key_title">"Recents" Button Long press behaviour</string>
    <string name="notifications_icons">Notifications</string>
    <string name="Backup_Restore">Backup/Restore colour settings</string>
    <string name="header_color_preference_title">Header</string>
    <string name="navbar_color_preference_title">Navigation Bar</string>
    <string name="statusbar_color_preference_title">Status Bar</string>
    <string name="quick_settings_preference_title">Quick Settings</string>
    <string name="notifications_color_preference_title">Notifications</string>
    <string name="lockscreen_preference_title">Lockscreen</string>
    <string name="clock_position">Clock Position</string>
    <string name="biometrics_settings_preferences">Biometrics</string>
    <string name="status">License Status</string>
    <string name="nightlyupdateinterval_title">Change background checking frequency</string>
    <string name="nightlyupdateinterval_hint">Input frequency in HOURS</string>
</resources>