<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

<!--    <PreferenceScreen
        android:layout_width="fill_parent"
        android:layout_height="135.0dip"
        android:key="ui"
        android:layout="@layout/ui"
        android:selectable="false"/>-->

    <PreferenceCategory
        android:key="statusbar_title"
        android:title="@string/immersive_category"/>

    <ListPreference
        android:entries="@array/tweaks_immersive_entries"
        android:entryValues="@array/tweaks_immersive_values"
        android:icon="@drawable/ic_immersive_mode"
        android:key="tweaks_immersive_list"
        android:title="@string/tweaks_immersive_title"
        android:summary="%s"/>


    <MultiSelectListPreference
        android:icon="@drawable/ic_immersive_mode"
        android:dialogTitle="@string/immersive_perapp"
        android:entries="@array/immersive_perapp_entries"
        android:entryValues="@array/immersive_perapp_values"
        android:key="immersive_perapp"
        android:summary="@string/immersive_perapp_summary"
        android:title="@string/immersive_perapp_title"/>


    <PreferenceCategory
        android:key="statusbar_title"
        android:title="@string/nav_statusbar"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/tweaks_clock_position_entries"
        android:entryValues="@array/tweaks_clock_position_values"
        android:icon="@drawable/ic_clock_position"
        android:key="tweaks_clock_position"
        android:title="@string/clock_position"
        android:summary="%s"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_clock"
        android:key="tweaks_clock_onclick"
        android:summary="@string/disabled"
        android:summaryOn="@string/tweaks_clock_onclick_summary"
        android:title="@string/tweaks_clock_onclick_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_battery"
        android:key="tweaks_hide_battery"
        android:summary="@string/disabled"
        android:summaryOn="@string/enabled"
        android:title="@string/tweaks_hide_battery_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_dt2s"
        android:key="tweaks_double_tap_sleep"
        android:summary="@string/tweaks_double_tap_sleep_summary"
        android:title="@string/tweaks_double_tap_sleep_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_multi_user"
        android:key="tweaks_show_multi_user"
        android:summary="@string/disabled"
        android:summaryOn="@string/enabled"
        android:title="@string/tweaks_show_multi_user_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_battery_bar"
        android:key="battery_bar"
        android:summary="@string/battery_bar_summary"
        android:summaryOn="@string/battery_bar_summaryOn"
        android:title="@string/battery_bar_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_battery_bar1"
        android:dependency="battery_bar"
        android:key="battery_bar_animate"
        android:summaryOff="@string/battery_bar_animate_style_summary"
        android:summaryOn="@string/battery_bar_animate_style_summaryOn"
        android:title="@string/battery_bar_animate_style_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_battery_bar2"
        android:dependency="battery_bar"
        android:key="battery_bar_style"
        android:summary="@string/battery_bar_center_style_summary"
        android:summaryOn="@string/battery_bar_center_style_summaryOn"
        android:title="@string/battery_bar_center_style_title"/>

    <com.ice.box.customcolorpicker.ColorPreference
        android:defaultValue="-13388315"
        android:icon="@drawable/ic_battery_bar3"
        android:dependency="battery_bar"
        android:key="battery_bar_color"
        android:title="@string/battery_bar_color_title"
        app:cpv_showAlphaSlider="true"
        app:cpv_showColorShades="true"/>

    <ListPreference
        android:defaultValue="2"
        android:icon="@drawable/ic_battery_bar4"
        android:dependency="battery_bar"
        android:entries="@array/battery_bar_thickness_entries"
        android:entryValues="@array/battery_bar_thickness_values"
        android:key="battery_bar_thickness"
        android:title="@string/battery_bar_thickness_title"
        android:summary="%s"/>

    <PreferenceCategory
        android:key="qs_title"
        android:title="@string/quick_settings_preference_title"/>

    <ListPreference
        android:defaultValue="6"
        android:entries="@array/quick_qs_button_entries"
        android:entryValues="@array/quick_qs_button_values"
        android:icon="@drawable/ic_compact_tiles"
        android:key="tweaks_quick_qs_buttons"
        android:summary="%s"
        android:title="@string/tweaks_quick_qs_buttons_title"/>

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/qs_tile_row_entries"
        android:entryValues="@array/qs_tile_row_values"
        android:icon="@drawable/ic_column"
        android:key="qs_tile_row"
        android:summary="%s"
        android:title="@string/tweaks_qs_rows_title"/>

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/qs_tile_column_entries"
        android:entryValues="@array/qs_tile_column_values"
        android:icon="@drawable/ic_row"
        android:key="qs_tile_column"
        android:summary="%s"
        android:title="@string/tweaks_qs_columns_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_brightness"
        android:key="tweaks_hide_brightness_slider"
        android:summary="@string/tweaks_brightness_slider_summary"
        android:summaryOn="@string/tweaks_brightness_slider_summaryOn"
        android:title="@string/tweaks_brightness_slider_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_lock"
        android:key="tweaks_qs_lock"
        android:summary="@string/tweaks_qs_lock_summary"
        android:title="@string/tweaks_qs_lock_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_lock"
        android:key="tweaks_qs_override_lockscreen"
        android:summary="@string/tweaks_qs_override_lockscreen_summary"
        android:title="@string/tweaks_qs_override_lockscreen_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_pull"
        android:key="tweaks_qs_pulldown"
        android:summary="@string/disabled"
        android:summaryOn="@string/tweaks_qs_pulldown_summary"
        android:title="@string/tweaks_qs_pulldown_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_blur"
        android:key="tweaks_pulldown_blur"
        android:summary="@string/tweaks_qs_pulldown_blur_summary"
        android:title="@string/tweaks_qs_pulldown_blur_title"/>

    <PreferenceCategory
        android:key="notifications_title"
        android:title="@string/notifications_icons"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_notification"
        android:key="tweaks_disable_persistent_notifications"
        android:summary="@string/disabled"
        android:summaryOn="@string/enabled"
        android:title="@string/tweaks_disable_system_notifications"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_keyboard"
        android:key="tweaks_hide_keyboard_switcher"
        android:summary="@string/visible"
        android:summaryOn="@string/hidden"
        android:title="@string/tweaks_hide_keyboard_switcher_title"/>

    <PreferenceCategory
        android:key="navbar_title"
        android:title="@string/navbar_color_preference_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="tweaks_show_navbar"
        android:title="@string/tweaks_show_navbar_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_navbarheight"
        android:key="tweaks_custom_navbar_height"
        android:title="@string/tweaks_allow_custom_navbar_height_title"/>

    <Preference
        android:defaultValue="128"
        android:key="tweaks_navbar_height"
        android:icon="@drawable/ic_navbarheight"
        android:title="@string/tweaks_navbar_height_title"/>

    <PreferenceCategory
        android:key="general_title"
        android:title="@string/general"/>



    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_rotate"
        android:key="tweaks_all_rotations"
        android:summary="@string/disabled"
        android:summaryOn="@string/enabled"
        android:title="@string/tweaks_all_rotations_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_loud_volume"
        android:key="tweaks_disable_volume_warning"
        android:summary="@string/hidden"
        android:summaryOn="@string/visible"
        android:title="@string/tweaks_disable_volume_warning_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_brightness"
        android:key="tweaks_hide_brightness_warning"
        android:summary="@string/hidden"
        android:summaryOn="@string/visible"
        android:title="@string/tweaks_disable_brightness_warning_title"/>

    <PreferenceCategory android:title="@string/biometrics_settings_preferences"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_fingerprint"
        android:key="tweaks_fingerprint_unlock"
        android:summary="@string/tweaks_fingerprint_unlock_summary"
        android:summaryOn="@string/tweaks_fingerprint_unlock_summaryOn"
        android:title="@string/tweaks_fingerprint_unlock_title"/>

    <PreferenceCategory android:title="@string/buttons"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_back"
        android:key="tweaks_back_to_kill"
        android:summary="@string/disabled"
        android:summaryOn="@string/enabled"
        android:title="@string/tweaks_back_to_kill_title"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/tweaks_recent_key_entries"
        android:entryValues="@array/tweaks_recent_key_values"
        android:icon="@drawable/ic_recents"
        android:key="tweaks_recent_key_config"
        android:title="@string/tweaks_recent_key_title"
        android:summary="%s"/>

    <PreferenceCategory android:title="@string/window_animation"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/window_animation_scale_entries"
        android:entryValues="@array/window_animation_scale_values"
        android:icon="@drawable/ic_window_anim"
        android:key="window_animation_scale"
        android:title="@string/window_animation_scale_title"
        android:summary="%s"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/transition_animation_scale_entries"
        android:entryValues="@array/transition_animation_scale_values"
        android:icon="@drawable/ic_transition"
        android:key="transition_animation_scale"
        android:title="@string/transition_animation_scale_title"
        android:summary="%s"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/animator_duration_scale_entries"
        android:entryValues="@array/animator_duration_scale_values"
        android:icon="@drawable/ic_animator"
        android:key="animator_duration_scale"
        android:title="@string/animator_duration_scale_title"
        android:summary="%s"/>

</PreferenceScreen>