<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:onClick="toggle_contents"
        android:title="@string/navbar_color_preference_title"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_colors"
        android:key="tweaks_unlock_navbar_colors"
        android:summary="@string/tweaks_allow_color_change_summary"
        android:summaryOn="@string/tweaks_allow_color_change_summaryOn"
        android:title="@string/tweaks_allow_color_change"/>

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_nav_dynamic"
        android:key="tweaks_dynamic_navbar"
        android:summary="@string/tweaks_dynamic_navbar_summary"
        android:title="@string/tweaks_dynamic_navbar_title"/>

    <com.ice.box.customcolorpicker.ColorPreference
        android:defaultValue="-328966"
        android:dependency="tweaks_unlock_navbar_colors"
        android:icon="@drawable/ic_button"
        android:key="tweaks_navbar_icon_color"
        android:title="@string/tweaks_navbar_icon_color"
        app:cpv_showAlphaSlider="true"
        app:cpv_showColorShades="true"/>
</PreferenceScreen>